Update to fix comment issue in unminified nmsu.css.  Also added unminified js resources.  Removed all footer content from template except for copyright statement.

--- a/template.html
+++ b/template.html
@@ -110,47 +110,7 @@
         </div>
 
         <footer>
-            <hr />
-            <!-- Bottom Footer
-            ================================================== -->
-            <section class="text-center">
-                <img src="images/bottom-tagline.png" width="480" height="136" alt="New Mexico State University, All About Discovery" class="img-responsive center-block">
-                <hr>
-                <ul class="list-inline">
-                    <li>
-                        <a href="http://www.facebook.com/newmexicostateuniversity">
-                            <img alt="New Mexico State University Facebook" src="images/icn_facebook_32.png" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://twitter.com/#!/nmsu">
-                            <img alt="New Mexico State University Twitter" src="images/icn_twitter_32.png" />
-                        </a>
-                    </li>
-                    <li>
-                        <a href="http://www.youtube.com/newmexicostateu">
-                            <img alt="New Mexico State University YouTube" src="images/icn_youtube_32.png" />
-                        </a>
-                    </li>
-                </ul>
-                <address>
-                    <ul class="list-inline separated">
-                        <li>New Mexico State University</li>
-                        <li>Las Cruces, NM</li>
-                        <li>(575) 646-0111</li>
-                    </ul>
-                </address>
-                <hr />
-                <nav role="navigation">
-                    <ul class="list-inline separated">
-                        <li><a title="General Information: Contact Us" href="#">Contact Us</a></li>
-                        <li><a title="General Information: Copyright" href="#">Copyright</a></li>
-                        <li><a title="General Information: Privacy" href="#">Privacy</a></li>
-                        <li><a title="General Information: Emergency Information" href="#">Emergency Information</a></li>
-                        <li><a title="Search for Employment and Careers" href="http://jobs.nmsu.edu">Employment Opportunities</a></li>
-                    </ul>
-                </nav>
-            </section>
+            <!-- Place any additional footer content here -->
 
             <!-- Legal and Copyright
             ================================================== -->
