Small fix for radio controls docs.

--- a/features.html
+++ b/features.html
@@ -2345,7 +2345,6 @@
                                                     <option>Option 3</option>
                                                 </select>
                                             </div>
-                                            <strong class="form-label">Radio Boxes</strong>
                                             <fieldset>
                                                 <legend>Radios</legend>
                                                 <div class="radio">
@@ -2368,7 +2367,7 @@
                                                 </div>
                                             </fieldset>
                                             <fieldset>
-                                                <legend>Checkbox</legend>
+                                                <legend>Checkboxes</legend>
                                                 <div class="checkbox">
                                                     <label for="standardCheckbox1">
                                                         <input type="checkbox" id="standardCheckbox1" title="Checkbox 1" name="standardCheckbox" value="" /> 
@@ -2420,7 +2419,6 @@
                     &lt;option&gt;Option 3&lt;/option&gt;
                 &lt;/select&gt;
             &lt;/div&gt;
-            &lt;strong class="form-label"&gt;Radio Boxes&lt;/strong&gt;
             &lt;fieldset&gt;
                 &lt;legend&gt;Radios&lt;/legend&gt;
                 &lt;div class="radio"&gt;
@@ -2442,7 +2440,6 @@
                     &lt;/label&gt;
                 &lt;/div&gt;
             &lt;/fieldset&gt;
-            &lt;strong class="form-label"&gt;Checkbox&lt;/strong&gt;
             &lt;fieldset&gt;
                 &lt;legend&gt;Checkboxes&lt;/legend&gt;
                 &lt;div class="checkbox"&gt;
