--- a/template.html
+++ b/template.html
@@ -31,12 +31,12 @@
                 <div class="row">
                     <div class="col-md-7">
                         <div class="h1 row">
-                            <div class="col-lg-2 col-md-3 col-sm-2 col-xs-3">
+                            <div class="col-sm-2 col-xs-3">
                                 <a href="/">
                                     <img id="logo" src="images/nmsu-logo-only.png" alt="NMSU logo" title="NMSU Home" class="img-responsive">
                                 </a>
                             </div>
-                            <div class="col-lg-10 col-md-9 col-sm-10 col-xs-9">
+                            <div class="col-sm-10 col-xs-9">
                                 <a href="/">
                                     <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
