--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
         <header id="masthead" class="bg-primary hidden-xs" role="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                         <div class="h1 row">
                             <div class="col-sm-2 col-xs-3">
                                 <a href="/">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-offset-1 hidden-xs hidden-sm">
+                    <div class="col-md-4 col-sm-4 col-md-offset-1 hidden-xs hidden-sm">
                         <!-- place holder for search -->
                     </div>
                 </div>
