--- a/features.html
+++ b/features.html
@@ -49,41 +49,25 @@
         <header id="masthead" class="bg-primary hidden-xs" role="banner">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-7">
+                    <div class="col-md-7 col-sm-8">
                         <div class="h1 row">
-                            <div class="col-lg-2 col-md-3 col-sm-2 col-xs-3">
-                                <a href="//nmsu.edu">
+                            <div class="col-sm-2 col-xs-3">
+                                <a href="/">
                                     <img id="logo" src="images/nmsu-logo-only.png" alt="NMSU logo" title="NMSU Home" class="img-responsive">
                                 </a>
                             </div>
-                            <div class="col-lg-10 col-md-9 col-sm-10 col-xs-9">
-                                <a href="//nmsu.edu">
+                            <div class="col-sm-10 col-xs-9">
+                                <a href="/">
                                     <img id="logo_tagline" src="images/nmsu-words-only.png" alt="NMSU tagline" title="NMSU Home" class="img-responsive">
                                 </a>
-                                <a href="#">
-                                    <small>Brand Identity Program</small>
+                                <a href="/"> 
+                                    <small>Department Name</small>
                                 </a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-offset-1 hidden-xs hidden-sm">
-                        <div class="pull-right hidden-xs near-full-width padded-15">
-                            <!-- End Search Drop Down -->
-                            <div id="search-stack" class="offset-top-10"> 
-                                <div class="form-group" role="search">
-                                    <form action="http://www.nmsu.edu/search_results.php" method="POST" id="site-search" class="form-search">
-                                        <div class="form-group has-feedback" role="search">
-                                            <label class="sr-only" for="search-query">Search</label>
-                                            <input name="q"  type="text" id="search-query" title="Site Search" class="form-control" placeholder="Type a Keyword" />
-                                            <span class="glyphicon glyphicon-search form-control-feedback text-muted" aria-hidden="true"></span>
-                                            <button name="submit_search" type="submit" id="searchButton" class="searchButton sr-only" aria-label="Search" title="Submit Search"><span class="sr-only">Search</span></button>
-                                            <input type="hidden" name="domains" value="nmsu.edu" />
-                                            <input type="hidden" name="sitesearch" value="nmsu.edu" />
-                                        </div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-md-4 col-sm-4 col-md-offset-1 hidden-xs hidden-sm">
+                        <!-- place holder for search -->
                     </div>
                 </div>
             </div>
@@ -105,6 +89,20 @@
                     <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white2.png" alt="NMSU Logo"/></a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
+                    <div id="search-stack-mobile"> 
+                        <div class="form-group" role="search">
+                            <form action="http://www.nmsu.edu/search_results.php" method="POST" id="site-search-mobile" class="form-search">
+                                <div class="form-group has-feedback" role="search">
+                                    <label class="sr-only" for="search-query">Search</label>
+                                    <input name="q"  type="text" id="search-query-mobile" title="Site Search" class="form-control" placeholder="Search" />
+                                    <span class="glyphicon glyphicon-search form-control-feedback text-muted" aria-hidden="true"></span>
+                                    <button name="submit_search" type="submit" id="search-button-mobile" class="sr-only" value="Search" title="Submit Search"></button>
+                                    <input type="hidden" name="domains" value="nmsu.edu" />
+                                    <input type="hidden" name="sitesearch" value="nmsu.edu" />
+                                </div>
+                            </form>
+                        </div>
+                    </div>
                     <ul class="nav navbar-nav main-nav">
                         <li><a href="http://brand.nmsu.edu">Brand Identity</a></li>
                         <li>
