Increased line-height and breadcrumb vertical padding. Made search form action protocol agnostic. Reduced collapsed menu brand logo width by 20px to avoid line wrap on viewports down to 320px wide.  Updated all layouts to use newer search field.  Removed getPosition.min.js from layouts that were not using it.  Removed extra footer content from most example layouts.  Replaced <section> tags with <div> tags to reduce white space above content.  Replaced sidebar elements with <aside>.  Removed -mobile from new search classes and ids.

--- a/template.html
+++ b/template.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Empty page for Bootstrap/NMSU Brand Development">
         <meta name="author" content="Brendan Shaughnessy">
+        <link rel="icon" href="/favicon.ico">
         <title>Bootstrapped Template | New Mexico State University - All About Discovery!</title>
 
         <!-- Bootstrap core CSS -->
@@ -69,17 +70,17 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white2.png" alt="NMSU Logo"/></a>
+                    <a href="//nmsu.edu" class="navbar-brand visible-xs"><img src="images/logo-mobile-white.png" alt="NMSU Logo"/></a>
                 </div>
                 <div class="collapse navbar-collapse" id="main-navigation-options">
-                    <div id="search-stack-mobile"> 
+                    <div id="search-stack"> 
                         <div class="form-group" role="search">
-                            <form action="http://www.nmsu.edu/search_results.php" method="POST" id="site-search-mobile" class="form-search">
+                            <form action="//www.nmsu.edu/search_results.php" method="POST" id="site-search" class="form-search">
                                 <div class="form-group has-feedback" role="search">
                                     <label class="sr-only" for="search-query">Search</label>
-                                    <input name="q"  type="text" id="search-query-mobile" title="Site Search" class="form-control" placeholder="Search" />
+                                    <input name="q"  type="text" id="search-query" title="Site Search" class="form-control" placeholder="Search" />
                                     <span class="glyphicon glyphicon-search form-control-feedback text-muted" aria-hidden="true"></span>
-                                    <button name="submit_search" type="submit" id="search-button-mobile" class="sr-only" value="Search" title="Submit Search"></button>
+                                    <button name="submit_search" type="submit" id="search-button" class="sr-only" value="Search" title="Submit Search"></button>
                                     <input type="hidden" name="domains" value="nmsu.edu" />
                                     <input type="hidden" name="sitesearch" value="nmsu.edu" />
                                 </div>
@@ -129,6 +130,5 @@
         <script src="assets/js/jquery-2.1.3.min.js"></script>
         <!-- Include all compiled plugins (below), or include individual files as needed -->
         <script src="assets/js/bootstrap.min.js"></script>
-        <script src="assets/js/getPosition.min.js"></script>
     </body>
 </html>
